--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Anonymous Author</a><sup></sup></span> -->
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Anonymous institution<br>ICML 2025 under review</span>
+                    <span class="author-block">Anonymous institution</span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -175,7 +175,7 @@
     <div class="container">
       <div class="image-container">
         <div class="image-item">
-          <img src="static/images/training_process.png" alt="First image" style="width: 70%; display: block; margin: auto;"/>
+          <img src="static/images/training_process.png" alt="First image" style="width: 50%; display: block; margin: auto;"/>
           <h2 class="subtitle has-text-centered">
             LCDSP training process
           </h2>
@@ -226,7 +226,7 @@
     <div class="container">
       <div class="image-container">
         <div class="image-item">
-          <img src="static/images/inference_process.png" alt="First image" style="width: 65%; display: block; margin: auto;"/>
+          <img src="static/images/inference_process.png" alt="First image" style="width: 60%; display: block; margin: auto;"/>
           <h2 class="subtitle has-text-centered">
             LCDSP inference process
           </h2>
@@ -308,7 +308,7 @@
     </div>
     <div class="image-container" style="text-align: center; overflow: visible;">
       <div class="image-item" style="overflow: visible;">
-          <img src="static/images/5v5_nl_radar.png" alt="First image" style="width: 150%; max-width: none; transform: translateX(-15%); display: block;">
+          <img src="static/images/5v5_nl_radar.png" alt="First image" style="width: 150%; max-width: none; transform: translateX(-16%); display: block;">
       </div>
     </div>
   </div>
@@ -611,7 +611,7 @@
 
 
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{
@@ -622,7 +622,7 @@
         note={under review}
         }</code></pre>
     </div>
-</section>
+</section> -->
         <!-- booktitle={Submitted to The Thirteenth International Conference on Learning Representations}, -->
         <!-- url={https://openreview.net/forum?id=KohdorhwHt}, -->
 <!--End BibTex citation -->
