--- a/index.html
+++ b/index.html
@@ -68,17 +68,19 @@
               <!-- Paper authors -->
               <span class="author-block">
                 <div class="is-size-5 publication-authors">
-                  <span class="author-block">Anonymous Author<br></span>
+                  <span class="author-block">Chenglu Sun<sup>1*</sup>, Shuo Shen<sup>1*</sup>, Haonan Hu<sup>1</sup>, Wei Zhou<sup>2</sup>, Chen Chen<sup>3#</sup><br></span>
                 </div>
                 <!-- <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Anonymous Author</a><sup></sup></span> -->
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Anonymous institution</span>
+                    <span class="author-block"><sup>1</sup>Sports Products Department, Tencent IEG</span>
+                    <span class="author-block"><sup>2</sup>School of Future Technology, Nanjing University of Information Science and Technology</span>
+                    <span class="author-block"><sup>3</sup>Human Phenome Institute, Fudan University</span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         <!-- Arxiv PDF link -->
+                      <!-- Arxiv PDF link -->
                       <!-- <span class="link-block">
                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
@@ -97,8 +99,8 @@
                         <i class="fas fa-file-pdf"></i>
                       </span>
                       <span>Supplementary</span>
-                    </a>
-                  </span> -->
+                      </a>
+                    </span> -->
 
                   <!-- Github link -->
                   <span class="link-block">
